received items adapter implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="negative">No</string>
     <string name="positive">Yes</string>
     <string name="choose">Choose the product you wish to buy</string>
+    <string name="choose1">Choose</string>
     <!--Buttons texts-->
 
     <!--Hints-->
