rate activity deleted

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="share">Share</string>
     <string name="local">See local grocery</string>
     <string name="negative">No</string>
+    <string name="negative1">Cancel</string>
     <string name="positive">Yes</string>
     <string name="choose">Choose</string>
     <string name="choose1">Choose the product you wish to buy</string>
