--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="send">Send</string>
     <string name="barcode">Barcode</string>
     <string name="name">Name</string>
+    <string name="logout">logout</string>
     <!--Buttons texts-->
 
     <!--Hints-->
