--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
     <string name="send">Send</string>
     <string name="barcode">Barcode</string>
     <string name="name">Name</string>
-    <string name="logout">logout</string>
+    <string name="logout">Logout</string>
+    <string name="product">New product</string>
     <!--Buttons texts-->
 
     <!--Hints-->
