view to see all local items in recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="name">Name</string>
     <string name="logout">Logout</string>
     <string name="product">New product</string>
+    <string name="delete">Delete</string>
     <!--Buttons texts-->
 
     <!--Hints-->
