select barcode layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="logout">Logout</string>
     <string name="product">New product</string>
     <string name="delete">Delete</string>
+    <string name="retry">Retry</string>
+    <string name="select">Select</string>
     <!--Buttons texts-->
 
     <!--Hints-->
