--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="delete">Delete</string>
     <string name="retry">Retry</string>
     <string name="select">Select</string>
+    <string name="date">Expiration date</string>
     <!--Buttons texts-->
 
     <!--Hints-->
