layout changes to take photos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="retry">Retry</string>
     <string name="select">Select</string>
     <string name="date">Expiration date</string>
+    <string name="picture">Take a photo</string>
     <!--Buttons texts-->
 
     <!--Hints-->
