activity collections layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="date1">Set an expiration date and choose</string>
     <string name="picture">Take a photo</string>
     <string name="set">Set</string>
+    <string name="collection">Create collection</string>
     <!--Buttons texts-->
 
     <!--Hints-->
