--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="picture">Take a photo</string>
     <string name="set">Set</string>
     <string name="collection">Create collection</string>
+    <string name="item">See your products</string>
     <!--Buttons texts-->
 
     <!--Hints-->
