buttons in Collections activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="set">Set</string>
     <string name="collection">Create collection</string>
     <string name="item">See your products</string>
+    <string name="create">Create</string>
     <!--Buttons texts-->
 
     <!--Hints-->
