--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="collection">Create collection</string>
     <string name="item">See your products</string>
     <string name="create">Create</string>
+    <string name="remove">Remove</string>
     <!--Buttons texts-->
 
     <!--Hints-->
