barcode scanning fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="item">See your products</string>
     <string name="create">Create</string>
     <string name="remove">Remove</string>
+    <string name="stop">Stop</string>
     <!--Buttons texts-->
 
     <!--Hints-->
