--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="create">Create</string>
     <string name="remove">Remove</string>
     <string name="stop">Stop</string>
+    <string name="suggest">Suggestions</string>
     <!--Buttons texts-->
 
     <!--Hints-->
