--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,38 +2,38 @@
     <string name="app_name">Tracking My Pantry</string>
 
     <!--Buttons texts-->
-    <string name="buy">Buy product</string>
-    <string name="buy1">Buy</string>
+    <string name="buyProduct">Buy product</string>
+    <string name="buy">Buy</string>
     <string name="signIn">Sign in</string>
     <string name="signUp">Sign up</string>
     <string name="search">Search</string>
     <string name="share">Share</string>
     <string name="local">See local grocery</string>
     <string name="negative">No</string>
-    <string name="negative1">Cancel</string>
+    <string name="negativeCanc">Cancel</string>
     <string name="positive">Yes</string>
-    <string name="positive1">OK</string>
+    <string name="positiveOk">OK</string>
     <string name="choose">Choose</string>
-    <string name="choose1">Choose the product you wish to buy</string>
+    <string name="chooseDevice">Choose the device you to connect to</string>
     <string name="describe">Description</string>
-    <string name="describe1">Set a name and a description for</string>
-    <string name="describe2">Add a description</string>
+    <string name="describeName">Set a name and a description for</string>
+    <string name="describeAdd">Add a description</string>
     <string name="rate">Rate</string>
-    <string name="rate1">Set a rate for</string>
+    <string name="rateSet">Set a rate for</string>
     <string name="send">Send</string>
     <string name="barcode">Barcode</string>
     <string name="name">Name</string>
     <string name="logout">Logout</string>
-    <string name="product">New product</string>
+    <string name="productNew">New product</string>
+    <string name="productWatch">See your products</string>
     <string name="delete">Delete</string>
     <string name="retry">Retry</string>
     <string name="select">Select</string>
-    <string name="date">Expiration date</string>
-    <string name="date1">Set an expiration date and choose</string>
-    <string name="picture">Take a photo</string>
+    <string name="dateExpire">Expiration date</string>
+    <string name="dateExpireSet">Set an expiration date and choose</string>
+    <string name="pictureTake">Take a photo</string>
     <string name="set">Set</string>
-    <string name="collection">Create collection</string>
-    <string name="item">See your products</string>
+    <string name="collectionCreate">Create collection</string>
     <string name="create">Create</string>
     <string name="remove">Remove</string>
     <string name="stop">Stop</string>
