--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="suggest">Suggestions</string>
     <string name="requestAccept">Accept a request</string>
     <string name="pair">Pair</string>
+    <string name="locations">Locations</string>
     <!--Buttons texts-->
 
     <!--Hints-->
