current location button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="pair">Pair</string>
     <string name="locations">Locations</string>
     <string name="positionMy">My position</string>
+    <string name="save">Save</string>
     <!--Buttons texts-->
 
     <!--Hints-->
