alert dialog before starting a bluetooth connection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="save">Save</string>
     <string name="noElements">No available elements</string>
     <string name="end">End</string>
-    <string name="discovery">Discovery</string>
+    <string name="find">Find</string>
     <!--Buttons texts-->
 
     <!--Hints-->
